--- a/index4.html
+++ b/index4.html
@@ -110,6 +110,6 @@ google_ad_height = 50;
             $("#code").typewriter();
         }
     </script>
-	<audio src="20140413_025646.mp3" autoplay="autoplay"></audio>
+	<audio src="./img/大城小爱.mp3" autoplay="autoplay"></audio>
 
 </body></html>
