--- a/index5.html
+++ b/index5.html
@@ -104,6 +104,7 @@ $(document).ready(function(e) {
 });
 </script>
 </head>
+	<audio src="./img/给你们.mp3" autoplay="autoplay"></audio>
 
 <body>
 <audio src="def.mp3" autoplay="autoplay"></audio>
