--- a/index.html
+++ b/index.html
@@ -124,8 +124,9 @@ function updateNumbers() {
         <span class="days-label">days</span>
       </div>
       <div class="seconds">15 hours 24 minutes 30 seconds</div>
-	  <div> <a href="./index1.html">回忆我们的恋爱旅程！！！</a></div>
+	  <div style="text-align: center;"> <a href="./index1.html" style="text-align: center; font-size: 30px;font-family:Georgia">回忆我们的恋爱旅程！！！</a></div>
     </div>
-   
+	
+   	<audio src="./img/做我的猫.mp3" autoplay="autoplay"></audio>
 
 </body></html>
