--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ function updateNumbers() {
         <span class="days-label">days</span>
       </div>
       <div class="seconds">15 hours 24 minutes 30 seconds</div>
-	  <div style="text-align: center;"> <a href="./index1.html" style="text-align: center; font-size: 30px;font-family:Georgia">回忆我们的恋爱旅程！！！</a></div>
+	  <div style="text-align: center;"> <a href="./index1.html" style="text-align: center; font-size: 30px;font-family:Georgia">今天我们结婚了！！</a></div>
     </div>
 	
    	<audio src="./img/做我的猫.mp3" autoplay="autoplay"></audio>
