--- a/index3.html
+++ b/index3.html
@@ -130,13 +130,13 @@ $(document).ready(function(e) {
 	<div class="tittle" id="t-5" style="">
 		<table width="100%" border="0" height="100%">
 			<tbody><tr>
-				<td align="center"><br>下面是我用我的技能<span class="big">，向你释爱！！！！</span></td>
+				<td align="center"><br>下面是我用我的专属技能<span class="big">，向你释爱！！！！</span></td>
 			</tr>
 		</tbody></table>
 	</div>
 	
 	<div align="center" class="tishi">
-		<span class="tishiContent">轻触屏幕继续</span>
+		<span class="tishiContent">点一下</span>
 	</div>
 
 
