--- a/index5.html
+++ b/index5.html
@@ -62,7 +62,7 @@ $(document).ready(function(e) {
     var guang=setInterval("$.guang()",120);
     
     var subs=0;
-    var string="本人王松松在婚后保证会做到以下几点…… ██1、和妻子大人逛街或者去其他地方的时候，目光一定不会在其他女人身上停留三秒钟!██2、结婚以后，我自愿承担家中所有的家务!██3、当老婆大人心中郁闷的时候，我会第一时间站出来给你当出气筒!██4、老婆大人给我下的口令，不管多难我一定立刻执行!██5、老婆大人说的话不管是对的还是错的，我都会认为是正确的!████6、本人的钱财在结婚之后无条件的交给老婆大人保管!██7、在今后如果有了爱情的结晶，我保证疼老婆比疼宝宝更多一些!██████████ 本人签名：王松松";
+    var string="本人王松松在婚后保证会做到以下几点…… ██1、和妻子大人逛街或者去其他地方的时候，目光一定不会在其他女人身上停留三秒钟!██2、结婚以后，我自愿承担家中所有的家务!██3、当老婆大人心中郁闷的时候，我会第一时间站出来给你当出气筒!██4、老婆大人给我下的口令，不管多难我一定立刻执行!██5、老婆大人说的话不管是对的还是错的，我都会认为是正确的!██6、本人的钱财在结婚之后无条件的交给老婆大人保管!██7、在今后如果有了爱情的结晶，我保证疼老婆比疼宝宝更多一些!██████████ 本人签名：王松松";
     $.intent=function(str){
         str="　　"+str;
         //var reg=new RegExp("/█{1,2}/","i"); //创建正则RegExp对象
